Closed
Bug 1595222
Opened 6 years ago
Closed 6 years ago
Don't define an unused |AtomicReturnReg64| on x86
Categories
(Core :: JavaScript Engine: JIT, defect, P2)
Core
JavaScript Engine: JIT
Tracking
()
RESOLVED
FIXED
mozilla72
Tracking | Status | |
---|---|---|
firefox72 | --- | fixed |
People
(Reporter: Waldo, Assigned: Waldo)
Details
Attachments
(1 file)
AtomicReturnReg64 is defined on x86, but it's only used in an assertion, so it's a compile error in FPUF=1 builds. There's no good reason for it to exist, really, so just don't define it for x86.
Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Attachment #9107629 -
Attachment description: Bug 1595222 - Don't define an unused |AtomicReturnReg64| on x86. r=jandem → Bug 1595222 - Don't define an unused |AtomicReturnReg64| on x86. r=lth
Updated•6 years ago
|
Priority: -- → P2
Pushed by jwalden@mit.edu:
https://hg.mozilla.org/integration/autoland/rev/283981b64bea
Don't define an unused |AtomicReturnReg64| on x86. r=lth
![]() |
||
Comment 3•6 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox72:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Updated•6 years ago
|
Assignee: nobody → jwalden
You need to log in
before you can comment on or make changes to this bug.
Description
•