Bug 1595222 - Don't define an unused |AtomicReturnReg64| on x86.  r=lth

Differential Revision: https://phabricator.services.mozilla.com/D52424